--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/lodash": "^4.14.168",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
+    "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.7",
     "firebase": "^8.2.4",
@@ -21,6 +22,7 @@
     "lodash": "^4.17.20",
     "postcss": "^7",
     "react": "^17.0.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
     "react-google-button": "^0.7.2",
     "react-redux": "^7.2.2",
