--- a/package.json
+++ b/package.json
@@ -52,5 +52,8 @@
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.15"
-  }
+  },
+    "eslintConfig" : {
+        "extends" : ""
+    }
 }
