--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-redux-firebase": "^3.9.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "slugify": "^1.5.0",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
